# worklytics

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.node.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db_config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics_commands.rs  db_commands.rs  excel_commands.rs  export_commands.rs  holiday_commands.rs  leave_commands.rs  mod.rs  note_commands.rs  settings_commands.rs  task_commands.rs  work_commands.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/models/: holiday.rs  leave.rs  mod.rs  note.rs  task.rs  work_entry.rs
src/components/calendar/: CalendarCell.tsx  CalendarView.tsx  WorkStatusModal.tsx
src/components/common/: Button.tsx  ConfirmDialog.tsx  Modal.tsx  StatusBadge.tsx
src/components/dashboard/: MonthlyChart.tsx  StatsCard.tsx  StatusDistributionChart.tsx  YearlyTrendChart.tsx
src/components/holidays/: HolidayForm.tsx  HolidayManager.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/leaves/: LeaveForm.tsx  LeaveManager.tsx
src/components/notes/: NoteCard.tsx  NoteEditor.tsx
src/pages/: AboutPage.tsx  CalendarPage.tsx  DashboardPage.tsx  HolidaysPage.tsx  HomePage.tsx  LeavesPage.tsx  NotesPage.tsx  ProfilePage.tsx  SettingsPage.tsx  TasksPage.tsx
src/store/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: cn.ts  dateUtils.ts  excelExport.ts  tauriCommands.ts
(+4 files in other folders)
