[package]
name = "worklytics"
version = "1.0.0"
description = "Worklytics — Daily Work Status Tracker"
authors = ["Worklytics Dev"]
edition = "2021"

[lib]
name = "worklytics_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rusqlite        = { version = "0.31", features = ["bundled"] }
chrono          = { version = "0.4", features = ["serde"] }
thiserror       = "1"

[profile.release]
opt-level   = "s"
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true
